--- a/app.css
+++ b/app.css
@@ -16,6 +16,7 @@ body{
 	width: 100%;
 }
 .menu{
+  font-family: Arial, Helvetica, sans-serif;
 	width: 33%;
 	display: block;
 	margin-left: auto;
@@ -24,11 +25,13 @@ body{
 
 }
 .col{
+  font-family: Arial, Helvetica, sans-serif;
 	width: 30%;
 	margin: 20px auto;
 	display: block;
 }
 .footer{
+  font-family: Arial, Helvetica, sans-serif;
 	width: 100%;
 	padding: 20px;
 }
@@ -41,6 +44,7 @@ body{
   overflow: hidden;
 }
 .text{
+  font-family: Arial, Helvetica, sans-serif;
   width: 100%;
   height: 300px;
   padding: 30px;
