--- a/app.css
+++ b/app.css
@@ -30,6 +30,18 @@ body{
 	margin: 20px auto;
 	display: block;
 }
+
+.noticia2{
+  font-family: Arial, Helvetica, sans-serif;
+	width: 90%;
+	margin: 70px auto;
+  display: block;
+  padding: 10px;
+  min-height: 500px;
+  box-sizing: border-box;
+  border-bottom: 40px;
+}
+  
 .footer{
   font-family: Arial, Helvetica, sans-serif;
 	width: 100%;
